--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
 	        	<li><a href="/about">About</a></li>
 	        	<li><a href="/projects">Projects</a></li>
         		<li><a href="/cv">CV</a></li>
-        		<li><a href="szaka.github.io/blog">Blog</a></li>
+        		<li><a href="/blog">Blog</a></li>
     		</ul>
 		</nav>
 		<div class="container">
