--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 body {
     margin: 60px auto;
     width: 70%;
+   background-color: rgba(0, 77, 60, 1) 
 }
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
