--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 body {
     margin: 60px auto;
-    width: 70%;
+    width: 70%;position:relative
    background-color: rgba(0, 77, 60, 1) 
 }
 nav ul, footer ul {
