--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,13 @@
 		<title>{{ page.title }}</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
+
+
+# Allow crawling of all content
+User-agent: *
+Disallow: /
+
+
 	</head>
 	<body>
 		<nav>
