--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -345,7 +345,7 @@ p a {
 
 /*
   ========================================
-  Speakers
+  About
   ========================================
 */
 
@@ -373,7 +373,7 @@ p a {
 
 /*
   ========================================
-  Venue
+  Project
   ========================================
 */
 
@@ -384,7 +384,7 @@ p a {
   height: 264px;
 }
 
-/* Extra small devices (phones, 600px and down) */
+/* Extra small devices (phones, 600px and down) 
 @media only screen and (max-width: 600px) {
   .primary-header {
     width: 70%;
@@ -413,16 +413,15 @@ p a {
 } 
 
 
-/* Small devices (portrait tablets and large phones, 600px and up) */
+Small devices (portrait tablets and large phones, 600px and up) 
 @media only screen and (min-width: 600px) {...} 
 
  Medium devices (landscape tablets, 768px and up) 
 @media only screen and (min-width: 768px) {...} 
-
-/* Large devices (laptops/desktops, 992px and up) */
+Large devices (laptops/desktops, 992px and up) 
 @media only screen and (min-width: 992px) {...} 
 
-/* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {...}
+ Extra large devices (large laptops and desktops, 1200px and up) 
+ @media only screen and (min-width: 1200px) {...}*/
 
 
