--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -410,7 +410,11 @@ p a {
   .primary-header,
   .container, 
   .hero,
-  .lead, 
+  .lead,
+  .row-alt,
+  .self,
+  .col-2-3,
+  .col-1-3, 
   .primary-footer
   small {
     float: none;
@@ -426,6 +430,7 @@ p a {
   }
 
   .hero,
+  .lead,
   .container {
     padding: 0px 8px 25px 22px;
   }
