--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -411,7 +411,9 @@ p a {
   .container, 
   .hero,
   .lead,
+  .row,
   .row-alt,
+  .grid,
   .self,
   .col-2-3,
   .col-1-3, 
@@ -421,19 +423,32 @@ p a {
     width: auto;
   }
 
-  .logo {
-    display: none;
-  }
+.logo {
+  border-top: 4px solid #7180B9;
+  float: left;
+  font-size: 48px;
+  font-weight: 100;
+  letter-spacing: .5px;
+  line-height: 44px;
+  padding: 40px 50px 22px 0;
+  text-transform: uppercase;
+}
+
+
+
    nav {
     float: left;
     padding: 0px 8px 6px 0px;
   }
 
-  .hero,
-  .lead,
-  .container {
-    padding: 0px 8px 25px 22px;
-  }
+
+
+
+.lead {
+  text-align: left;
+
+}
+
 
 
 small {
